<resources>
    <string name="app_name">ThirdWeekTask</string>
    <string name="tv_1">아이디</string>
    <string name="tv_2">비밀번호</string>
    <string name="et_2_hint">비밀번호를 입력하세요.</string>
    <string name="et_1_hint">아이디를 입력하세요.</string>
    <string name="btn_1_text">로그인</string>
    <string name="btn_2_text">회원가입</string>
    <string name="home_id">아이디 :</string>
    <string name="idididid">아이디</string>
    <string name="end">종료</string>
    <string name="id">아이디</string>
    <string name="sign_up_name">이름</string>
    <string name="sign_up_name_hint">이름을 입력하세요.</string>
    <string name="sign_up_id">아이디</string>
    <string name="sign_up_id_hint">아이디를 입력하세요.</string>
    <string name="sign_up_password">비밀번호</string>
    <string name="sign_up_password_hint">비밀번호를 입력하세요.</string>
    <string name="sign_up_button">회원가입</string>
    <string name="imageview_description">userImage</string>
    <string name="main_name">이름 : 김윤재</string>
    <string name="main_age">나이 : 29</string>
    <string name="main_mbti">MBTI : INTP</string>
    <string name="main_image_description">my image</string>
    <string name="login_image">login image</string>
    <string name="ud83c_udf00">🌀</string>
    <string name="btn_text">종료</string>
</resources>